---
source: tera/src/snapshot_tests/build_errors.rs
expression: "&err"
input_file: tera/src/snapshot_tests/build_errors/syntax/invalid_expression.txt
---
error: Found `}}` but expected one of: integer, float, string, bool, ident, `-`, `not`, `<`, `{`, `[` or `(`
 --> test.html:1:8
  |
1 | {{ 1 + }}
  |        ^^
